RESOLVED FIXED38546
Node.focus() fails to move focus from subframe properly
https://bugs.webkit.org/show_bug.cgi?id=38546
Summary Node.focus() fails to move focus from subframe properly
Alexey Proskuryakov
Reported 2010-05-04 14:06:02 PDT
Created attachment 55045 [details] test case If focus is in a subframe, and a script tries to take it to outer frame, this results in inconsistent focus state. A focused input isn't painted as such, but it keyboard input still goes into it. See attached test case.
Attachments
test case (851 bytes, text/html)
2010-05-04 14:06 PDT, Alexey Proskuryakov
no flags
proposed fix (28.05 KB, patch)
2010-05-04 14:25 PDT, Alexey Proskuryakov
no flags
better fix (28.14 KB, patch)
2010-05-07 11:36 PDT, Alexey Proskuryakov
adele: review+
Alexey Proskuryakov
Comment 1 2010-05-04 14:06:38 PDT
See also: bug 26824.
Alexey Proskuryakov
Comment 2 2010-05-04 14:25:44 PDT
Created attachment 55049 [details] proposed fix
Alexey Proskuryakov
Comment 3 2010-05-05 11:26:51 PDT
WebKit Review Bot
Comment 4 2010-05-05 12:00:15 PDT
http://trac.webkit.org/changeset/58830 might have broken SnowLeopard Intel Release (Tests)
Alexey Proskuryakov
Comment 5 2010-05-05 12:11:49 PDT
platform/mac/accessibility/frame-with-title.html -PASS accessibilityController.focusedElement.description is 'AXDescription: All Packages' -PASS accessibilityController.focusedElement.description is 'AXDescription: packageListFrame' +FAIL accessibilityController.focusedElement.description should be AXDescription: All Packages. Was AXDescription: . +FAIL accessibilityController.focusedElement.description should be AXDescription: packageListFrame. Was AXDescription: .
Alexey Proskuryakov
Comment 6 2010-05-05 12:20:47 PDT
Rolled out in r58836. Calling focus() from JavaScript uses the same code path, and is somehow broken by this change.
Alexey Proskuryakov
Comment 7 2010-05-07 11:36:54 PDT
Created attachment 55400 [details] better fix Same idea, hopefully less nonsensical implementation.
Alexey Proskuryakov
Comment 8 2010-05-07 11:41:15 PDT
Alexey Proskuryakov
Comment 9 2010-05-11 17:01:55 PDT
Note You need to log in before you can comment on or make changes to this bug.