        Reviewed by Adele Peterson.

https://bugs.webkit.org/show_bug.cgi?id=38546
        Node.focus() fails to move focus from subframe properly

        Test: fast/frames/take-focus-from-iframe.html

        * html/HTMLFrameElementBase.cpp: (WebCore::HTMLFrameElementBase::setFocus): Don't clear
        focus if this frame doesn't have it. This can happen if page's and HTMLFrameElement's ideas
        of focused frame get out of sync temporarily.



Canonical link: https://commits.webkit.org/50207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58961 268f45cc-cd09-0410-ab3c-d52691b4dbfc