WebCore/html/HTMLFrameElementBase.cpp
@@ -242,8 +242,12 @@ bool HTMLFrameElementBase::supportsFocus() const
 void HTMLFrameElementBase::setFocus(bool received)
 {
     HTMLFrameOwnerElement::setFocus(received);
-    if (Page* page = document()->page())
-        page->focusController()->setFocusedFrame(received ? contentFrame() : 0);
+    if (Page* page = document()->page()) {
+        if (received)
+            page->focusController()->setFocusedFrame(contentFrame());
+        else if (page->focusController()->focusedFrame() == contentFrame()) // Focus may have already been given to another frame, don't take it away.
+            page->focusController()->setFocusedFrame(0);
+    }
 }
 
 bool HTMLFrameElementBase::isURLAttribute(Attribute *attr) const
